--- a/app/assets/stylesheets/individual_service.css.scss
+++ b/app/assets/stylesheets/individual_service.css.scss
@@ -7,13 +7,15 @@
 
 }
 #individual {
-	/*background:green;*/
+    margin-top: 0px;
+    
+	background-image: -moz-linear-gradient(#edf7fa, #73d0f1);
 	
 
 }
 #name {
     float:left;
-    position: fixed; top: 471px; left: 15px;
+    position: fixed; top: 501px; left: 15px;
     font-size :18px;	
 
 }
@@ -22,13 +24,28 @@
 	margin-left:2%;
 	
 	float:right;
-	position:fixed; top:120px; left:371px;
+	position:fixed; top:110px; left:371px;
 	width:60%;
+	font-size :18px;
+}
+#outcome {
+	margin-right:20%;
+	margin-left:2%;
+	float: right;
+	position:fixed; top:350px; left:371px;
+	width:60%;
+	font-size :18px;
+}
+#solutionAssociate {
+	margin-right:20%;
+	margin-left:2%;
+	float:right;
+	position:fixed; top:450px; left:371px;
 	font-size :18px;
 }
 #price {
 	float:left;
-	position: fixed; top: 511px; left: 15px;
+	position: fixed; top: 541px; left: 15px;
 	font-size :18px;
 	
 
