--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -20,6 +20,14 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
+    <%= f.label :outcome %><br />
+    <%= f.text_field :outcome %>
+  </div>
+  <div class="field">
+    <%= f.label :solution_associate %><br />
+    <%= f.text_field :solution_associate %>
+  </div>
+  <div class="field">
     <%= f.label :price %><br />
     <%= f.text_field :price %>
   </div>
