logo homepage text changes

--- a/app/assets/stylesheets/individual_service.css.scss
+++ b/app/assets/stylesheets/individual_service.css.scss
@@ -15,8 +15,17 @@
 }
 #name {
     float:left;
-    position: fixed; top: 501px; left: 15px;
+    position: fixed; top: 551px; left: 35px;
+    /*position: fixed; top: 501px; left: 15px;*/
     font-size :18px;	
+
+}
+#solutionAssociate {
+	/*margin-right:20%;*/
+	/*margin-left:2%;*/
+	float: left;
+	position: fixed; top: 511px; left: 7px;
+	font-size :18px;
 
 }
 #description {
@@ -32,20 +41,14 @@
 	margin-right:20%;
 	margin-left:2%;
 	float: right;
-	position:fixed; top:350px; left:371px;
+	position:fixed; top:300px; left:371px;
 	width:60%;
 	font-size :18px;
 }
-#solutionAssociate {
-	margin-right:20%;
-	margin-left:2%;
-	float:right;
-	position:fixed; top:450px; left:371px;
-	font-size :18px;
-}
+
 #price {
 	float:left;
-	position: fixed; top: 541px; left: 15px;
+	position: fixed; top: 591px; left: 35px;
 	font-size :18px;
 	
 
