--- a/app/views/businesssolutions/index.html.erb
+++ b/app/views/businesssolutions/index.html.erb
@@ -14,7 +14,7 @@
 
     <div id="header">
         <div id="logo">
-            <%= image_tag("logokpipe180.png", :alt =>"logo") %>
+            <%= image_tag("kpipelogo.jpg", :alt =>"logo") %>
         </div>
                 <!--center nav bar-->
 
@@ -48,7 +48,7 @@
         </div>-->
     </div>
 <div id="allservices">
-<h1>Listing services</h1>
+<h1>Service Listings</h1>
 
 <table>
   <tr>
