--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -10,7 +10,7 @@
 </head>
 <div id="header">
 		<div id="logo">
-			<%= image_tag("logokpipe180.png", :alt =>"logo") %>
+			<%= image_tag("kpipelogo.jpg", :alt =>"logo") %>
 		</div>
 		<div id="navbar">
 			<nav>
@@ -65,14 +65,14 @@
   						<%= @service.outcome %>
 				</p>
 			</div>
+
 			<div id="solutionAssociate">
 				<p>
   					<b>Solution Associate:</b>
   						<%= @service.solution_associate %>
 				</p>
 			</div>
-			<br/>
-			<br/>
+
 			<div id="price">
 				<p>
   					<b>Price:</b>
@@ -89,10 +89,10 @@
 		<br/>
 		<br/>
 		<br/>
+		<br/>
+		<br/>
+		<br/>
 		<%= link_to 'Back', businesssolutions_path %>
-		<br/>
-		<br/>
-		<br/>
 		<br/>
 
 
