--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -14,7 +14,7 @@
 
 	<div id="header">
 		<div id="logo">
-			<%= image_tag("logokpipe180.png", :alt =>"logo") %>
+			<%= image_tag("kpipelogo.jpg", :alt =>"logo") %>
 		</div>
 				<!--center nav bar-->
 
@@ -121,24 +121,24 @@
 				</nav>
 			</div>-->
 
-			<blockquote>Outsourcing has become a dirty word.  But we all need help.  As a small business you doing it all can be overwhelming.  How scary is it to rely on a stanger?  This is your business.  You need help but don't need an employee.  Can I put that off any longer?  Am I not spending enough time with customers?  These are the day to day headaches in many small businesses.
+			<!--<blockquote>Outsourcing has become a dirty word.  But we all need help.  As a small business you doing it all can be overwhelming.  How scary is it to rely on a stanger?  This is your business.  You need help but don't need an employee.  Can I put that off any longer?  Am I not spending enough time with customers?  These are the day to day headaches in many small businesses.
 
 		    </br>
 			</br>
 		    Kpipe is knowledge available from people with strengths, passions and skills. We create service packages with defined outcomes to meet your needs by empowering people to do what they love. In your business are there things you put off or don't want to do?  Why not get the help you need from someone who is passionate and loves what they are doing?  See <a href="<%= businesssolutions_path %>"class="button blue single" >Business to Business<a/> above for a list of solutions. 
 		    </br>
 
-			</blockquote>
+			</blockquote>-->
 			
 			<div id="featured">
 			<h2>Kpipe...</h2>
 				<h3>It is all about people.</h3>
 
-				<p>Who are we?  We are an army of happily employed people, displaced workers, have another job, stay at home moms, students, retirees, your neighbor, etc.  Whatever else we do in life we have a passion for more.  We have built experience and knowledge in many areas and want to leverage our strengths, passions, and skills to be fulfilling our love.  We are hungry for knowledge and want to share what we have learned and can do with the world.  Bottom line we are individually following our dreams.
+				<p>Kpipe.com is designed to be a One Stop Shop for services for both businesses and consumers. A broad range of Service Packages are available with defined outcomes for a fixed price. Each is delivered by very qualified individuals who are part of the growing Kpipe.com team..
 				</p>
-				<p>We are your one stop shop for finding the defined service packages you need.  There is no bidding, waiting, and uncertanty that come along in searching for the help you need.  Browse the packages and when you see one you need just click it to learn more.  We are always adding more.  If you have a need that is unfullfilled email us.  Do you have a package that can be offered?  Join us!		
+				<p>Getting things done in business is always difficult. Especially the small focused efforts. Kpipe addresses that challenge. Our service packages lay out what you are buying and how much it will costs. Kpipe is your service solution company. We stand behind the service delivered. We are far more than a “match-making” company. We are your solution! We make certain the service package is delivered with the defined outcomes accomplished. If not, we have a money back guarantee. You won't get that on those match-making sites. 		
 				</p>
-				<p>
+				<p>We also have far more solutions. Service solutions that you can purchase today and get immediate action on. Our goal is to be a one stop shop for services. Everyday we will be getting closer to that goal. New services will continually be added. Stop back often! 
 				</p>
 			</div>
 		</div>
@@ -147,13 +147,7 @@
 </body>
 
 <footer>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</p>
+	<p>Kpipe.com is owned and operated by Kpipe, LLC</p>
 
 </footer>
 
