--- a/app/views/businesssolutions/show.html.erb
+++ b/app/views/businesssolutions/show.html.erb
@@ -1,3 +1,31 @@
+<DOCTYPE! html>
+<html>
+<head>
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <!--add more meta tags seo -->
+
+<head>
+
+	<title>Kpipe</title>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-35277235-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+</head>
+<body>
+
+
 <p id="notice"><%= notice %></p>
 
 
@@ -30,3 +58,6 @@
 
 <%= link_to 'Edit', edit_service_path(@service) %> |
 <%= link_to 'Back', businesssolutions_path %>
+
+</body>
+</html>
