--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -24,6 +24,9 @@
 			</nav>
 
 
+		</div>
+		<div id="textlogo">
+			<%= image_tag("kpipetextlogo.jpg", :alt =>"textlogo") %>
 		</div>		
 			<!--<div id="checkbar">
 			<nav>
@@ -68,14 +71,14 @@
 
 			<div id="solutionAssociate">
 				<p>
-  					<b>Solution Associate:</b>
+  					<b>Solution Associate: </b>
   						<%= @service.solution_associate %>
 				</p>
 			</div>
 
 			<div id="price">
 				<p>
-  					<b>Price:</b>
+  					<b>Price: $</b>
   						<%= @service.price %>
 				</p>
 			</div>
