--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -117,6 +117,11 @@ blockquote p {
   float: left;
   /*padding: 0 0 0 1%;*/
 }
+#textlogo {
+  float:right;
+  border-left:1px solid #2D5289;
+
+}
 
 #checkbar {
   background: #FF1493;
@@ -215,4 +220,8 @@ footer {
   /*background: coral;*/
   text-align: center;
   position: static;	
+}
+h1 {
+  padding: 0 2% 0 0;
+  font-size:38px;
 }
