--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -8,6 +8,19 @@
 
 	<link rel= "stylesheet" type="text/css" href= "store.css.scss"/>
 	<title>Kpipe</title>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-35277235-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 
 <body>	
@@ -30,6 +43,9 @@
 			</nav>
 
 
+		</div>
+		<div id="textlogo">
+			<%= image_tag("kpipetextlogo.jpg", :alt =>"textlogo") %>
 		</div>
 
 		<!--checkout 
@@ -131,7 +147,7 @@
 			</blockquote>-->
 			
 			<div id="featured">
-			<h2>Kpipe...</h2>
+			<h1>Kpipe.com</h1>
 				<h3>It is all about people.</h3>
 
 				<p>Kpipe.com is designed to be a One Stop Shop for services for both businesses and consumers. A broad range of Service Packages are available with defined outcomes for a fixed price. Each is delivered by very qualified individuals who are part of the growing Kpipe.com team..
