--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -4,7 +4,10 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!--add more meta tags seo -->
-
+  
+  <!--[if IE]>
+    <link rel= "stylesheet" type="text/css" href= "iestore.css.scss"/>
+  <![endif]-->
 
 	<link rel= "stylesheet" type="text/css" href= "store.css.scss"/>
 	<title>Kpipe</title>
