--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+    <div class="field">
+    <%= f.label :excerpt %><br />
+    <%= f.text_area :excerpt %>
+  </div>
   <div class="field">
     <%= f.label :description %><br />
     <%= f.text_area :description %>
