changed description to excerpt on bus sol index list

--- a/app/views/businesssolutions/index.html.erb
+++ b/app/views/businesssolutions/index.html.erb
@@ -84,7 +84,7 @@
   <tr id="listing">
     <td id="serviceimage"><%= image_tag service.image_url %></td>
     <td id="servicename"><%= service.name %></td>
-    <td id="servicedescription"><%= service.description %></td>
+    <td id="serviceexcerpt"><%= service.excerpt %></td>
     <!--<td><%= service.outcome %></td>-->
     <td id="serviceassociate"><%= service.solution_associate %></td>
     <td id="serviceprice"><%= service.price %></td>
