added video and changed tag line

--- a/app/assets/stylesheets/iestore.css.scss
+++ b/app/assets/stylesheets/iestore.css.scss
@@ -147,6 +147,10 @@ blockquote p {
   display: inline;
   padding: 1em;
 }
+#video {
+  float: right;
+  padding: 0 0.25%;
+}
 #wrapper {
   float:left; 
   /*margin: .15em;*/
