--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -10,7 +10,7 @@
   <![endif]-->
 
 	<link rel= "stylesheet" type="text/css" href= "store.css.scss"/>
-	<title>Kpipe</title>
+	<title>Kpipe.com</title>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -76,21 +76,7 @@
 					<li><%= image_tag("socialmedia.png", :class => "align-left") %></li>
 					<li><%= image_tag("emergency.png", :class => "align-left") %></li>
 				</ul>
-				<!--<ul>
-					<% for service in @services %>
-						<li><%= image_tag(service.image_url) %></li>
 
-					<% end %>
-				</ul>-->
-				<!--<div class="align-left">-->
-				    <!--<ul>
-						<li><%= image_tag(service.image_url, :class => "align-left") %></li>
-						<li><%= image_tag(service.image_url, :class => "align-left") %></li>
-						<li><%= image_tag(service.image_url, :class => "align-left") %></li>
-						<li><%= image_tag(service.image_url, :class => "align-left") %></li>
-					</ul>-->
-				
-				<!--</div>-->
 			</div>
 		
 			<div id="rightColumn">
@@ -100,58 +86,19 @@
 					<li><%= image_tag("powerpoint.png", :class => "align-right") %></li>
 					<li><%= image_tag("bigdecisions.png", :class => "align-right") %></li>
 				</ul>
-				<!--<div class="align-right">-->
-					<!--<ul>
-						<li><%= image_tag(service.image_url, :class => "align-right") %></li>
-						<li><%= image_tag(service.image_url, :class => "align-right") %></li>
-						<li><%= image_tag(service.image_url, :class => "align-right") %></li>
-						<li><%= image_tag(service.image_url, :class => "align-right") %></li>
-
-					</ul>-->
-				<!--</div>-->
 			</div>
-		
-
+	<% end %>
 		<div id="centerColumn">
-					
-			<div id="service">
-				<ul>
-					<li><%= image_tag("research.png", :class => "align-right") %></li>
-					<li><%= image_tag("wordpress.png", :class => "align-right") %></li>
-					
-				</ul>
-
-				<!--<ul>
-					<li><%= image_tag(service.image_url, :class => "align-right") %></li>
-					<li><%= image_tag(service.image_url, :class => "align-right") %></li>
-				</ul>-->
+			<div id="video">
+				<iframe width="303" height="228" src="http://www.youtube.com/embed/xckFhyY4vak" frameborder="0" allowfullscreen></iframe>
 
 			</div>
-		<% end %>
-		    <!--<div id="navbar">
-				<nav>
-					<ul>
-						<li><a href="#">Welcome<a/></li>
-						<li><a href="<%= businesssolutions_path %>">Business to Business<a/></li>
-						<li><a href="#">Consumer<a/></li>
-						<li><a href="#">Search<a/></li>
-						<li><a href="#">Shop<a/></li>
-					</ul>
-				</nav>
-			</div>-->
 
-			<!--<blockquote>Outsourcing has become a dirty word.  But we all need help.  As a small business you doing it all can be overwhelming.  How scary is it to rely on a stanger?  This is your business.  You need help but don't need an employee.  Can I put that off any longer?  Am I not spending enough time with customers?  These are the day to day headaches in many small businesses.
 
-		    </br>
-			</br>
-		    Kpipe is knowledge available from people with strengths, passions and skills. We create service packages with defined outcomes to meet your needs by empowering people to do what they love. In your business are there things you put off or don't want to do?  Why not get the help you need from someone who is passionate and loves what they are doing?  See <a href="<%= businesssolutions_path %>"class="button blue single" >Business to Business<a/> above for a list of solutions. 
-		    </br>
-
-			</blockquote>-->
 			
 			<div id="featured">
 			<h1>Kpipe.com</h1>
-				<h3>It is all about people.</h3>
+				<h3>Connect.  Align.  Act.</h3>
 
 				<p>Kpipe.com is designed to be a One Stop Shop for services for both businesses and consumers. A broad range of Service Packages are available with defined outcomes for a fixed price. Each is delivered by very qualified individuals who are part of the growing Kpipe.com team..
 				</p>
@@ -159,6 +106,7 @@
 				</p>
 				<p>We also have far more solutions. Service solutions that you can purchase today and get immediate action on. Our goal is to be a one stop shop for services. Everyday we will be getting closer to that goal. New services will continually be added. Stop back often! 
 				</p>
+
 			</div>
 		</div>
 
