contact button new images

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -40,8 +40,8 @@
 					<li><a href="<%= store_index_path %>" class="button blue left">Welcome<a/></li>
 					<li><a href="<%= businesssolutions_path %>" class="button blue middle">Business to Business<a/></li>
 					<li><a href="#" class="button blue middle">Consumer<a/></li>
-					<li><a href="#" class="button blue middle">Search<a/></li>
-					<li><a href="#" class="button blue right">Shop<a/></li>
+					<li><a href="mailto:info@kpipe.com" class="button blue right">Contact<a/></li>
+					<!--<li><a href="#" class="button blue right">Shop<a/></li>-->
 				</ul>
 			</nav>
 
@@ -74,7 +74,7 @@
 					<li><%= image_tag("brainstorming.png", :class => "align-left") %></li>
 					<li><%= image_tag("businessplan.png", :class => "align-left") %></li>
 					<li><%= image_tag("socialmedia.png", :class => "align-left") %></li>
-					<li><%= image_tag("emergency.png", :class => "align-left") %></li>
+					<li><%= image_tag("audit.png", :class => "align-left") %></li>
 				</ul>
 
 			</div>
