--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -18,8 +18,8 @@
 					<li><a href="<%= store_index_path %>" class="button blue left">Welcome<a/></li>
 					<li><a href="<%= businesssolutions_path %>" class="button blue middle">Business to Business<a/></li>
 					<li><a href="#" class="button blue middle">Consumer<a/></li>
-					<li><a href="#" class="button blue middle">Search<a/></li>
-					<li><a href="#" class="button blue right">Shop<a/></li>
+					<li><a href="mailto:info@kpipe.com" class="button blue right">Contact<a/></li>
+					<!--<li><a href="#" class="button blue right">Shop<a/></li>-->
 				</ul>
 			</nav>
 
