--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -26,7 +26,7 @@
 </script>
 </head>
 
-<body>	
+<header>	
 
 	<div id="header">
 		<div id="logo">
@@ -66,6 +66,8 @@
 
 		</div> -->
     </div>
+</header>
+<body>
 	<div id="wrapper">
 		<!--<% @services.each do |service| %>-->
 
