--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -158,9 +158,9 @@ blockquote p {
   overflow: hidden;
   /*color: #41788c;*/
   background-image: -moz-linear-gradient(#edf7fa, #73d0f1);
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#73d0f1), to(#aae5f7));
-  background-image: -webkit-linear-gradient(#aae5f7, #73d0f1);
-  background-image: -o-linear-gradient(#aae5f7, #73d0f1);
+  /*background-image: -webkit-gradient(linear,0% 0%, 0% 100%, from(#73d0f1), to(#aae5f7));*/
+  background-image: -webkit-linear-gradient(#edf7fa, #73d0f1);
+  background-image: -o-linear-gradient(#edf7fa, #73d0f1);
 
   /*background: #aae5f7;*/
 }
